updated announcements
