# api/routes/swagger/swagger.json
@@ -185,10 +185,10 @@
           },
           {
             "in": "formData",
-            "name": "role_token",
+            "name": "image_url",
             "type": "integer",
             "required": false,
-            "description": "Update user role (may need to deprecate)."
+            "description": "The url that google provides for user profile image"
           }
         ],
         "responses": {
@@ -398,7 +398,15 @@
             "type": "integer",
             "required": true,
             "description": "The announcement id."
+          },
+          {
+            "in": "formData",
+            "name": "email",
+            "type": "string",
+            "required": true,
+            "description": "The email of the creator of the post."
           }
+
         ],
         "responses": {
           "default": {
@@ -428,6 +436,13 @@
             "type": "integer",
             "required": true,
             "description": "The announcement id."
+          },
+          {
+            "in": "formData",
+            "name": "email",
+            "type": "integer",
+            "required": true,
+            "description": "The announcement email of the post author."
           }
         ],
         "responses": {
